--- a/ProyectoTaller2/src/FrontEnd/TeacherView.form
+++ b/ProyectoTaller2/src/FrontEnd/TeacherView.form
@@ -139,9 +139,9 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="txtIdupdate" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="btnUpdate" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btnTakeProm" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="btnTakeProm" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
